--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+    "homepage":"http://lisa1501.github.io/react-tic-tac-toe",
   "name": "react-tic-tac-toe",
   "version": "0.1.0",
   "private": true,
@@ -6,8 +7,8 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.5.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^18.13.0",
+    "react-dom": "^18.13.0",
     "react-scripts": "4.0.3"
   },
   "homepage": "http://adagold.github.io/react-tic-tac-toe",
@@ -35,6 +36,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.1.0"
+    "gh-pages": "^5.0.0"
   }
 }
